feat: add musl support for PDFium native libraries and update version to 0.3.0 (#12)